# httpclient-cpp

examples/curl_post_with_data/: CMakeLists.txt  main.cpp
httpclient/: CMakeLists.txt  chunked_buffer.cpp  chunked_buffer.hpp  chunked_buffer_reader.cpp  chunked_buffer_reader.hpp  http_body.hpp  http_body_conversions.cpp  http_body_conversions.hpp  http_byte_body.hpp  http_conversions.cpp  http_conversions.hpp  http_empty_body.hpp  http_form_body.cpp  http_form_body.hpp  http_headers.cpp  http_headers.hpp  http_request.hpp  http_response.hpp  http_result.hpp  http_status_code.cpp  http_status_code.hpp  http_string_body.cpp  http_string_body.hpp  http_utility.cpp  http_utility.hpp  httpclient.cpp  httpclient.hpp
httpclient/curl/: CMakeLists.txt  httpclient_curl.cpp  httpclient_curl.hpp  httpclient_curl_handle.cpp  httpclient_curl_handle.hpp  httpclient_curl_initializer.cpp  httpclient_curl_initializer.hpp  httpclient_curl_slist.cpp  httpclient_curl_slist.hpp
